@@ -69,6 +69,10 @@ CHANGES
       their operands and only operate on sets, frozensets or
       subclasses of the collection type. Previously, they would
       accept any duck-typed set.
+      
+    - added an example dynamic_dict/dynamic_dict.py, illustrating
+      a simple way to place dictionary behavior on top of 
+      a dynamic_loader.
 
 - sql
     - Added COLLATE support via the .collate(<collation>)
